# analisis-sentimientos

./: Dockerfile  README.md  conftest.py  hello.py  pyproject.toml
assets/fonts/: dejavu-sans.book.pkl
results/csv_resultados/: resultados.csv
results/csv_unitarios/: resultado_1.csv  resultado_2.csv  resultado_3.csv
src/: detect_language.py  load_model.py  main.py  sentiment_analysis.py
src/file_utils/: extract_text_from_pdf.py  save_csv.py  save_pdf.py  save_screenshot.py
tests/: test_detect_language.py  test_file_utils.py  test_load_model.py
tests/test_results/: test_result.csv
